--- a/StyleSheets(SCSS)/main.scss
+++ b/StyleSheets(SCSS)/main.scss
@@ -7,6 +7,7 @@
 @import "./layout/header";
 
 // Importing page-specific styles
+@import "./pages/login";
 @import "./pages/about";
 @import "./pages/cart";
 @import "./pages/contact";
