--- a/StyleSheets(css)/main.css
+++ b/StyleSheets(css)/main.css
@@ -151,6 +151,71 @@ img {
   color: #0096a4 !important;
 }
 
+.login {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+}
+.login .photoForLogin img {
+  width: 49vw;
+  height: 99.4vh;
+}
+.login .formLogin {
+  width: 50%;
+}
+.login .formLogin div {
+  padding: 6rem 6rem 0 6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+}
+.login .formLogin div input {
+  outline: none;
+  border: none;
+  padding: 3px;
+  font-size: 15px;
+  border-bottom: 1px solid #9e9e9e;
+}
+.login .formLogin div .loginLink {
+  color: #9e9e9e;
+  border: 2px solid #9e9e9e;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-top: 10px;
+  font-size: 20px;
+  background-color: transparent;
+  padding: 12px 20px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.login .formLogin div .loginLink:hover {
+  background-color: #11a9b6;
+  color: #fff;
+  border: 2px solid #fff;
+}
+.login .formLogin h2 {
+  text-align: right;
+  margin-top: -70px;
+  font-size: 13px;
+}
+.login .formLogin h2 a {
+  text-decoration: none;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.login .formLogin h2 a:hover {
+  font-size: 14px;
+}
+
 section {
   margin: 40px;
   color: #696969;
