--- a/StyleSheets(css)/main.css
+++ b/StyleSheets(css)/main.css
@@ -326,7 +326,7 @@ section {
           align-items: center;
   font-size: 18px;
   text-transform: uppercase;
-  margin-bottom: 5rem;
+  margin: 2rem 0 5rem;
 }
 
 .head {
